k8s/bnt-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bnt-web-service
  namespace: bnt-web
spec:
  type: ClusterIP
  selector:
    app: bnt-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
