k8s/bnt-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bnt-web-ingress
  namespace: bnt-web
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - dev.bluenimbustech.com
    secretName: dev-bluenimbustech-com-tls
  rules:
  - host: dev.bluenimbustech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bnt-service
            port:
              number: 80
